fixed blobs not blurring when nav is opened

--- a/stylesheets/components/_content-card.scss
+++ b/stylesheets/components/_content-card.scss
@@ -6,7 +6,7 @@
   -webkit-border-radius: 10px;
   border-radius: 10px;
   border: 1px solid white;
-  max-width: 500px;
+  max-width: 300px;
   min-width: 250px;
   font-size: 0.8em;
   width: 100%;
@@ -36,6 +36,8 @@
       }
     }
     .image-content {
+      -webkit-border-top-left-radius: 10px;
+      -webkit-border-top-right-radius: 10px;
       width: 100%;
       height: 100%;
       overflow: hidden;
@@ -52,6 +54,8 @@
     }
   }
   .bottom-part {
+    -webkit-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
     border-top: 1px solid white;
     backdrop-filter: blur(3px);
     background-color: rgba(221, 97, 74, 0.25);
@@ -73,13 +77,12 @@
 
 // For tablet
 @media only screen and (min-width: 600px) {
-
+  .card {
+    font-size: 0.5em;
+  }
 }
 
 // For desktop
 @media only screen and (min-width: 1000px) {
-  .card {
-    width: 320px;
-    font-size: 0.5em;
-  }
+
 }
